src/less/res.less
// 整体宽度
#res-container .col-md-3,#res-container .col-md-9{
    padding-left: 0;
}
#res-container .col-md-9{
    padding-right: 0;
}
/*顶部*/
.res-header {
  height: 55px;
  background: @resNavHeaderBGColor;
  line-height: 55px;
  font-size: @resNavFontSize;
  color: #fff;
  margin-top: 15px;
}

// 顶部筛选
.select-nav-item{
    float: left;
    margin: 0 5px;
    position: relative;
}

.menu-drop .trigger {
    background: #fff;
    margin-top: 15px;
    padding-left: 6px;
    height: 30px;
    line-height: 30px;
    padding-right: 0;
    cursor: pointer;
}

.menu-drop .select-current{
    height: 20px;
    color: #4D4D4D;
}
.menu-drop .trigger i{
    background: @color1;
    font-size: 18px;
    margin: 1px;
    margin-left: 5px;
    padding: 1px 5px;
    color: #fff;
    width: 15px;
}
.menu-drop .icon-angle-up{
    display: none;
}
.menu-drop .icon-angle-down:before, .menu-drop .icon-angle-up:before, .menu-drop .icon-remove:before{
    padding-right: 5px; 
}
.menu-drop .icon-remove:hover{
    color: #DF3D6D;
}
.menu-drop .menu-drop-main{
    position: absolute;
    background: #fff;
    border: 1px solid @color2;
    border-top: none;
    left:-1px;
    width: 200px;
    z-index: 999;
    display: none;
}
.menu-drop-main .selected{
    color: #12879A;
}
.menu-drop-main .menu-drop-list{
    padding: 0;
    color: #4d4d4d;
}
.menu-drop-main .menu-drop-list li{
    float: left;
    padding:8px;
    line-height: 20px;
    cursor: pointer;
}
.menu-drop:hover .icon-angle-down{
    display: none;
}
.menu-drop:hover .menu-drop-main{
    display: block;
}
.menu-drop:hover .icon-angle-up{
    display: inline;
}
.seperate-right{
    float: left;
    margin-top: 5px;
}
.menu-drop-list li:hover{
    color:#0094CE;
}

.res-header .left-tips {
  padding-left: 30px;
  float: left;
}


.res-header img {
  position: relative;
  top: 3px;
}


.res-header select {
  color: @color11;
  width: 66px;
  height: 27px;
  font-size: 15px;
}
.res-header .icon-angle-right{
    color: #fff;
    font-size: 32px;
    padding:5px;
    
}
.res-filter {
  float: right;
}
.res-header .right-label {
  border-bottom: 1px solid #fff;
  padding: 0;
  margin-right:30px;
  cursor: pointer;
  display: inline-block;
  height: 40px;
}
.res-search {
  height: 30px;
  width: 343px;
  line-height: 30px;
  border: none;
  color:#333;
  padding-left: 5px;
}
.res-search-btn {
  width: 32px;
  height: 30px;
  background: #0094ce;
  display: inline-block;
  position: relative;
  top: 9px;
  right: 15px;
}
.res-header .icon-search{
    position: absolute;
    color: #fff;
    font-size: 16px;
    top: 6px;
    left: 8px;
}
.select-tips {
  font-size: 20px;
  background: #fff;
  font-size: 18px;
  border: 1px solid #b5b5b5;
  display: inline-block;
  width: 66px;
  height: 27px;
  line-height: 27px;
  text-indent: 5px;
}
.res-navbody {
  display: block;
  background: #E4F3F7;
  clear: both;
}
.res-navbody .res-body-content {
  border-bottom: 1px dashed @fff;
  line-height: 30px;
  color: @color1;
  font-size: 16px;
  position: relative;
}
.res-navbody .res-body-content{
    border-top: 1px dashed @fff;
    border-bottom: none;
}
.res-navbody .res-content-left{
    margin-right: 10px;
    padding-left: 20px;
    float: left;
}
.res-navbody .select-item{
    text-align: center;
    padding: 0px 7px;
    margin: 3px 3px;
    cursor: pointer;
    white-space:normal;
    float: left;
}
.res-navbody .select-item:hover {
  color: #FFF;
  background: @color8;
}
.res-navbody .selected {
  color: #FFF;
  background: @color8;
}
.res-navbody .res-subject-wrapper{
    width: 90%;
    float: left;
}
.res-navbody .res-more {
  cursor: pointer;
  position: absolute;
  top:0;
  right: 30px;
}
.res-version-wrapper{
   float: left; 
   width: 82%;
}
.res-material-wrapper{
   float: left; 
   width: 72%;
}
.res-navbody  .res-material-version{
    clear: both;
}
.res-navbody .res-content-footer{
    position: relative;
}
.res-navbody .res-content-footer img{
    position: absolute;
    right: 5px;
    top:-80px;
}
.res-navbody .res-content-footer div{
    height: 6px;
    background: #B0D042;
}

/*右侧*/
#res-content-right{
    background: #fff;
    padding-top: 30px;
}
.res-content-header{
    height: 30px;
    margin-top: 30px;
    background: url('assets/img/content-bg-header.png') repeat-x;
}

.res-header-catogry{
    background: #DDD;
    color: #5d5d5d;
    font-size: 17px;
    padding: 5px 15px;
    
}
.res-header-catogry .catogry-item{
    padding: 2px 3px;
    margin: 3px 1px;
    cursor: pointer;
}
//.catogry-item:before{
//  content: url('assets/img/lib_before.png');
//}
//.catogry-item:after{
//  content: url('assets/img/lib_after.png');
//}
.res-header-catogry .catogry-item:hover, .catogry-item-active{
    background: @color5;
    color: #fff;
}

.res-header-type{
    margin: 20px;
    font-size: 16px;
    color: #808080;
    
}
.res-header-type .type-title{
    font-weight: bold;
}
.type-active{
    background: @color5;
    color:#fff;
}
.res-header-type .type-list:hover{
    background: @color5;
    color: #fff;
}
.res-header-type .type-list{
    padding: 3px 6px;
    cursor: pointer;
}

.statistic-tab{
    font-size: 15px;
    color:#9D9D9E;
    margin: 5px 25px;
    float: right;
    height: 30px;
}
.statistic-item{
    margin: 5px;
    font-size: 15px;
    color:#9D9D9E;
    cursor: pointer;
}
.statistic-item:hover{
    color:#1589BE;
}

// 资源列表
.res-list-main{
  margin-top: 60px;
  margin-right: 15px;
  padding-bottom: 10px;
  margin-bottom: 20px;
}

// 列表显示
.res-list-main .res-ul-list {
  position: relative;
  padding-left: 15px;
}
.res-list-main .res-list-item {
  border-bottom: 1px dashed #9b9b9b;
  position: relative;
  padding: 6px;
  margin: 8px 0;
  cursor: pointer;
  font-size: 13px;
}
.res-list-main .res-list-item:hover{
    background: #e6f4f4;
}
.res-checkbox {
  width: 19px;
  height: 19px;
  position: absolute;
  left: 20px;
  top: 40px;
}
.res-thubmlist-thumb{
    width: 90%;
}
.res-list-thumb{
    margin-left: 55px;
    width:100px;
    height:100px;
    margin-right: 6px;
}
.res-thubmlist-info{
    font-size: 13px;
}
.res-list-info{
  position: absolute;
  line-height: 30px;
  cursor: pointer;
}
.res-title{
    font-size: 17px;
    color:#040000;
}
.res-type{
    margin-left: 5px;
}
.res-size{
    margin-left: 15px;
}

.res-number{
   margin-left: 25px; 
}
.res-star i{
    color: #dea618;
    font-size: 16px;
    margin-left: 5px;
}
.res-list-tools{
    float: right;
    
}
.res-select{
    background: @color5;
    color:#fff;
    margin-top: 15px;
    margin-right: 30px;
    padding: 10px 25px;
    border-radius: 6px;
}
.res-download{
    font-size: 15px;
    color:@color5;
    margin-left: 10px;
    margin-top: 5px;
}
.res-list-tools .res-download i{
    margin-right: 5px;
    font-size: 18px;
}
.res-download:hover{
    text-decoration: underline;
}
// 缩略图显示
.res-list-main .res-ul-thubmlist {
  position: relative;
  padding-left: 15px;
}
.res-list-main .res-thubmlist-item {
  border-bottom: 1px dashed #9b9b9b;
  padding: 6px;
  margin: 8px 0;
}
.res-list-main .res-thubmlist-item:hover{
    background: #e6f4f4;
}
.res-thubmlist-tools .res-select{
    padding: 6px 10px;
    margin-right: 0;
    margin-left: 10px;
}
// 列出备课夹
.addPrepare:hover .res-prepare-list{
    display: block;   
}
.res-prepare-list{
    position: absolute;
    right: 40px;
    top:60px;
    background: #fff;
    padding: 10px 20px;
    display: none;
    color: #999;
}
.res-prepare-list-item{
    margin: 5px;
}
.res-prepare-list-item:hover{
    text-decoration: underline;
    color: #0094CE;
}

// 备课夹 悬浮
.prepare-fixed{
    position: fixed;
    bottom: 350px;
    right: 10px;
    cursor: pointer;
    border-radius: 5px;
}
.prepare-fixed:hover .prepare-ctrls{
    visibility: visible;   
}
.prepare-fixed .prepare-text{
    width: 20px;
    color: #fff;
    margin-left: 8px;
}
.prepare-fixed  .prepare-shop{
    float: left;
    background: #41C9A9;
    padding: 5px;
    position: relative;
}
.prepare-fixed  .prepare-ctrls{
    float: left;
    height: 100px;
    width: 100px;
    margin-left: 3px;
    visibility: hidden;
    background: #41C9A9;
    padding: 5px;
}
.prepare-fixed .shop-count{
    position: absolute;
    background: #c81623;
    color: #fff;
    padding: 0 4px;
    font-size: 14px;
    border-radius: 7px 7px 7px 0;
    top: -5px;
    left: 36px;
}

